try fixing image to make it compatible on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -350,7 +350,7 @@ html body {
 
 .section__ourlatest_piece ul li img {
     width: calc(80% – 1rem / 2);
-    height: 430px;
+    height: auto;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -2126,7 +2126,7 @@ form.edit_checkout {
 /* TO:DO increase width to 234px and height to 293px */
 .section__collection_list #ProductGridContainer .collection.page-width .card__media>.media img {
     width: 95%;
-    height: 430px;
+    height: 100%;
     left: 50%!important;
     top: 50%!important;
     transform: translate(-50%,-50%)!important;
